updated addAsset and addDevice with levels added endpoint and queries to manage the get of all the levels

--- a/WebPlatform/Backend/AuthenticationManager/src/main/resources/application.properties
+++ b/WebPlatform/Backend/AuthenticationManager/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=9091
 datamanager.port=9090
 
 
-#server.address=localhost
-#datamanager.address=localhost
+server.address=localhost
+datamanager.address=localhost
 
-datamanager.address=b-datamanager
+#datamanager.address=b-datamanager
