--- a/WebPlatform/Backend/ApplicationGateway/src/main/resources/application.properties
+++ b/WebPlatform/Backend/ApplicationGateway/src/main/resources/application.properties
@@ -10,18 +10,18 @@ dataManager.port = 9090
 
 
 
-#server.address= localhost
-#auth.address= localhost
-#assetManager.address= localhost
-#dataManager.address = localhost
-#asyncController.address = localhost
+server.address= localhost
+auth.address= localhost
+assetManager.address= localhost
+dataManager.address = localhost
+asyncController.address = localhost
 
 
-auth.address = b-authenticationmanager
-assetManager.address = b-assetmanager
-dataManager.address = b-datamanager
+#auth.address = b-authenticationmanager
+#assetManager.address = b-assetmanager
+#dataManager.address = b-datamanager
 
 #address and port of the asyncController
 #asyncController.address = http://url.of.asyncController
-asyncController.address = b-middleware
+#asyncController.address = b-middleware
 asyncController.port = 9096
