--- a/WebPlatform/Backend/DataManager/src/main/resources/application.properties
+++ b/WebPlatform/Backend/DataManager/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=DataManager
 server.port=9090
-#server.address=localhost
+server.address=localhost
 
 spring.neo4j.uri=neo4j+s://5bd584c8.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
