--- a/WebPlatform/Backend/DataManager/src/main/resources/application.properties
+++ b/WebPlatform/Backend/DataManager/src/main/resources/application.properties
@@ -2,9 +2,15 @@ spring.application.name=DataManager
 server.port=9090
 server.address=localhost
 
-spring.neo4j.uri=neo4j+s://5bd584c8.databases.neo4j.io
+#MAIN DB
+#spring.neo4j.uri=neo4j+s://5bd584c8.databases.neo4j.io
+#spring.neo4j.authentication.username=neo4j
+#spring.neo4j.authentication.password=hlu_Q8vZdl_4fGnz4QxII1EKgTVax6CGhZe1WUUrCG0
+
+#SECOND DB for testing
+spring.neo4j.uri=neo4j+s://3e003521.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=hlu_Q8vZdl_4fGnz4QxII1EKgTVax6CGhZe1WUUrCG0
+spring.neo4j.authentication.password=8ULMcmIAq-EpoOczwvl15OLWVwx6_dqPOcBzeKZXzQs
 
 
 spring.jpa.hibernate.ddl-auto=update
