--- a/AsyncController/Async-Backend/Middleware/src/main/resources/application.properties
+++ b/AsyncController/Async-Backend/Middleware/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=Middleware
 
-#server.address = localhost
+server.address = localhost
 server.port = 9096
 
 #address and port of the application gateway
-#gateway.address = http://url.of.gateway
-gateway.address = b-applicationgateway
+
+#gateway.address = b-applicationgateway
+gateway.address = localhost
 gateway.port = 9093
 
 
