minor fix for efficiency in the get of the network

--- a/AsyncController/Async-Backend/Middleware/src/main/resources/application.properties
+++ b/AsyncController/Async-Backend/Middleware/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=Middleware
 
-server.address = localhost
 server.port = 9096
+
+#server.address = localhost
+#gateway.address = localhost
+
+gateway.address = b-applicationgateway
 
 #address and port of the application gateway
 
-#gateway.address = b-applicationgateway
-gateway.address = localhost
+
 gateway.port = 9093
 
 
