--- a/WebPlatform/Backend/AssetManager/src/main/resources/application.properties
+++ b/WebPlatform/Backend/AssetManager/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=9092
 
 datamanager.port=9090
 
-server.address=localhost
-datamanager.address=localhost
+#server.address=localhost
+#datamanager.address=localhost
 
 
-#datamanager.address = b-datamanager
+datamanager.address = b-datamanager
