--- a/WebPlatform/Frontend/my-app/package.json
+++ b/WebPlatform/Frontend/my-app/package.json
@@ -27,6 +27,9 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "ws": "^8.12.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
