added postgresql and neo4j dbs in docker-compose

--- a/WebPlatform/Backend/ApplicationGateway/src/main/resources/application.properties
+++ b/WebPlatform/Backend/ApplicationGateway/src/main/resources/application.properties
@@ -8,6 +8,7 @@ assetManager.port = 9092
 
 dataManager.port = 9090
 
+asyncController.port = 9096
 
 
 #server.address= localhost
@@ -25,4 +26,8 @@ asyncController.address = b-middleware
 #address and port of the asyncController
 #asyncController.address = http://url.of.asyncController
 
-asyncController.port = 9096
+
+
+
+server.http2.enabled=false
+server.compression.enabled=false
