--- a/WebPlatform/Backend/DataManager/src/main/resources/application.properties
+++ b/WebPlatform/Backend/DataManager/src/main/resources/application.properties
@@ -2,29 +2,57 @@ spring.application.name=DataManager
 server.port=9090
 #server.address=localhost
 
-#MAIN DB
+#MAIN NEO4J DB IN CLOUD
 #spring.neo4j.uri=neo4j+s://5bd584c8.databases.neo4j.io
 #spring.neo4j.authentication.username=neo4j
 #spring.neo4j.authentication.password=hlu_Q8vZdl_4fGnz4QxII1EKgTVax6CGhZe1WUUrCG0
 
-#SECOND DB for testing
-spring.neo4j.uri=neo4j+s://3e003521.databases.neo4j.io
+#SECOND NEO4J DB for testing IN CLOUD
+#spring.neo4j.uri=neo4j+s://3e003521.databases.neo4j.io
+#spring.neo4j.authentication.username=neo4j
+#spring.neo4j.authentication.password=8ULMcmIAq-EpoOczwvl15OLWVwx6_dqPOcBzeKZXzQs
+
+
+#MAIN NEO4J DB LOCAL
+spring.neo4j.uri=bolt://neo4j-db:7687
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=8ULMcmIAq-EpoOczwvl15OLWVwx6_dqPOcBzeKZXzQs
+spring.neo4j.authentication.password=password
+
+# Optional Neo4j settings
+spring.data.neo4j.database=neo4j
 
 
 
+
+#POSTGRE DB IN CLOUD
+#spring.jpa.hibernate.ddl-auto=update
+##Session mode
+##spring.datasource.url = jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:5432/postgres
+#
+##Transaction mode
+#spring.datasource.url = jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+#spring.datasource.username = postgres.muhyutzrfcatesrcjtsb
+#spring.datasource.password= nflqzcXAfTJsTXbH
+
+
+#POSTGRE DB LOCAL
 spring.jpa.hibernate.ddl-auto=update
-#Session mode
-#spring.datasource.url = jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/postgresDB
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Transaction mode
-spring.datasource.url = jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+# Optional PostgresSQL settings
+#spring.datasource.initialization-mode=always
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update  # use 'update', 'create', 'create-drop' as needed
 
-spring.datasource.username = postgres.muhyutzrfcatesrcjtsb
-spring.datasource.password= nflqzcXAfTJsTXbH
-
-
+#INFLUXDB CONFIG
 influxdb.url=http://influxdb:8086
 influxdb.token=mytoken
 influxdb.org=motusml
+
+
+
+server.http2.enabled=false
+server.compression.enabled=false
