--- a/WebPlatform/Frontend/vite-frontend/nginx/nginx.conf
+++ b/WebPlatform/Frontend/vite-frontend/nginx/nginx.conf
@@ -35,13 +35,16 @@ http {
             proxy_set_header X-Accel-Buffering no;
         }
 
-    location /grafana/ {
-            proxy_pass http://grafana:3030/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+     location /grafana/ {
+         proxy_pass http://grafana:3030/grafana/;  # Note the trailing slash
+         proxy_set_header Host $host;
+         proxy_set_header X-Real-IP $remote_addr;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header X-Forwarded-Proto $scheme;
+
+         # Adjust the `rewrite` to strip the sub-path for Grafana to understand it correctly
+
+     }
 
         location /influxdb/ {
             proxy_pass http://influxdb:8086/;
