--- a/WebPlatform/grafana/provisioning/dashboards/dashboard.yaml
+++ b/WebPlatform/grafana/provisioning/dashboards/dashboard.yaml
@@ -2,12 +2,20 @@
 apiVersion: 1
 
 providers:
- - name: 'default'
+ - name: 'devicetimeseries'
    orgId: 1
    type: file
    updateIntervalSeconds: 10
    allowUiUpdates: true
    options:
-     path: /etc/grafana/provisioning/dashboards
+     path: /etc/grafana/provisioning/dashboards/deviceTimeSeries
+
+ - name: 'prom_monitoring'
+   orgId: 1
+   type: file
+   updateIntervalSeconds: 10
+   allowUiUpdates: true
+   options:
+     path: /etc/grafana/provisioning/dashboards/Prometheus_Monitoring
 
 
