commit max thread in application properties

--- a/WebPlatform/Backend/ApplicationGateway/src/main/resources/application.properties
+++ b/WebPlatform/Backend/ApplicationGateway/src/main/resources/application.properties
@@ -27,7 +27,7 @@ asyncController.address = b-middleware
 #asyncController.address = http://url.of.asyncController
 
 
-
+server.tomcat.threads.max = 2000
 
 server.http2.enabled=false
 server.compression.enabled=false
