--- a/WebPlatform/Backend/DataManager/src/main/resources/application.properties
+++ b/WebPlatform/Backend/DataManager/src/main/resources/application.properties
@@ -53,6 +53,8 @@ influxdb.token=mytoken
 influxdb.org=motusml
 
 
+server.tomcat.threads.max = 2000
+
 
 server.http2.enabled=false
 server.compression.enabled=false
