--- a/WebPlatform/Backend/ApplicationGateway/pom.xml
+++ b/WebPlatform/Backend/ApplicationGateway/pom.xml
@@ -39,7 +39,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
